# director-dispatcher-pattern-example

./: CMakeLists.txt
include/app/: detector.hpp  image_analysis_strategy_selector.hpp  image_analyzer.hpp  notifier.hpp  tracker.hpp  video_provider.hpp
include/core/: an_event_producer.hpp  event_manager.hpp  event_type.hpp  i_event_subscription_service.hpp  i_image_analysis_strategy.hpp  i_image_analysis_strategy_selector.hpp  i_publisher.hpp  i_subscriber.hpp
src/: detector.cpp  event_manager.cpp  image_analysis_strategy_selector.cpp  image_analyzer.cpp  main.cpp  notifier.cpp  tracker.cpp  video_provider.cpp
